test/sema/typeck/struct/unnamed-field-assignment-wrong-type.out
error: cannot assign `Bool` to field `Foo`.`0` of type `Int64`.
--> unnamed-field-assignment-wrong-type.dora:3:5
 | struct Foo(Int, Bool)
 | fn f(x: Foo, v: Bool) {
 |     x.0 = v;
       ~~~~~~~
 | }
 | 
1 error found.
